<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitulo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/nueva_ruta"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <TextView
                android:id="@+id/textViewNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nombre"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextText"
                style="@style/GlobalEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewLocalizacion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/localizacion"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextLocalizacion"
                style="@style/GlobalEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text" />

            <TextView
                android:id="@+id/textViewTipoRuta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tipo_de_ruta"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp">

                <RadioButton
                    android:id="@+id/radioButtonCircular"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/circular" />

                <RadioButton
                    android:id="@+id/radioButtonLineal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/lineal" />
            </RadioGroup>

            <TextView
                android:id="@+id/textViewDificultad"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Dificultad"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/dificultad"
                android:layout_marginBottom="10dp"/>

            <TextView
                android:id="@+id/textViewDistancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/distancia_km"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextDistancia"
                style="@style/GlobalEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="numberDecimal" />

            <TextView
                android:id="@+id/textViewDescripcion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/descripcion"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextDescripcion"
                style="@style/GlobalEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:id="@+id/textViewNotas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/notas"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextNotas"
                style="@style/GlobalEditTextStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchFavorita"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/favorita"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginBottom="10dp"/>

            <Button
                android:id="@+id/buttonGuardar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/guardar" />
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
