
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:id="@+id/main"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context=".AltaRutaActivity">

    <Button
        android:id="@+id/buttonSalir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="72dp"
        android:text="@string/salir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonAyuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda"
        app:layout_constraintBottom_toTopOf="@+id/buttonAcercaDe"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonVerRutas"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAlta"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nueva_ruta"
        app:layout_constraintBottom_toTopOf="@+id/buttonVerRutas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogo"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonVerRutas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ver_rutas"
        app:layout_constraintBottom_toTopOf="@+id/buttonAyuda"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAlta"
        app:layout_constraintVertical_bias="0.5" />

    <Button
        android:id="@+id/buttonAcercaDe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/acerca_de"
        app:layout_constraintBottom_toTopOf="@+id/buttonSalir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAyuda"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/imageViewLogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo_no_background" />

</androidx.constraintlayout.widget.ConstraintLayout>